<?xml version="1.0" encoding="utf-8"?>
<!--
  - Copyright 2012 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<resources>

    <string name="app_name">SimpleSMS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="registrar_logar">Registrar/Logar</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="c2d">Echo</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="sample_email">sample_email</string>
    <string name="sample_name">sample_name</string>
    <string name="button_limpar">Limpar</string>
    <string name="sample_log">Colocar o log das açoes até agora...</string>
    <string name="instrucoes">Acesse o seu cadastro no servidor http://simplesmserver.appspot.com/ e configure os números e dispositivos. \n\n Este aplicativo enviará as mensagens mesmo em modo standby.\n\n</string>

</resources>
